--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
 
-    <main id="main" class="about_main_frame_all">
+    <main id="main" class="about_main_container">
 
         <h1 class="h3_about dark_text">NAUGHTY:</h1>
         <h2 class="h2_about dark_text">“NOT-BEING-OBEDIENT”</h2>
