--- a/pages/work.html
+++ b/pages/work.html
@@ -9,20 +9,31 @@
 </head>
 
 <body>
-  <div class="body_container--light" id="grid">
-
-    <header id="header">
-      <nav class="header_nav--light">
-        <ul class="header_ul">
-          <li><img class="header_nav_logo--light" src="../img/logo-circle-light.svg" width="80px"></li>
-          <li><a class="header_li--light--default" href="../index.html">HOME</a></li>
-          <li><a class="header_li--light--default" href="about.html">ABOUT</a></li>
-          <li><a class="header_li--light--active" href="work.html">WORK</a></li>
-          <li><a class="header_li--light--default" href="careers.html">CAREERS</a></li>
-          <li><a class="header_li--light--default" href="contact.html">CONTACT</a></li>
-        </ul>
+  <div class="body_container--light">
+    <header class="light_bg">
+      <nav class="navbar navbar-expand-lg nav_bootstrap light_bg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="">
+            <img class="btn_logo" src="../img/logo-circle-light.svg" width="80px">
+          </a>
+          <button class="navbar-toggler shadow-none border-0 btn-burger" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <img src="../img/icn-burger-dark.svg" width="40px">
+          </button>
+          </button>
+          <div class="collapse navbar-collapse text-center light_bg pb-5" id="menu">
+            <ul class="navbar-nav nav-fill w-100">
+              <li class="nav-item li_bootstrap"><a class="nav-link li--light" href="../index.html">HOME</a></li>
+              <li class="nav-item"><a class="nav-link li--light" href="about.html">ABOUT</a></li>
+              <li class="nav-item"><a class="nav-link li--light--active" href="work.html">WORK</a></li>
+              <li class="nav-item"><a class="nav-link li--light" href="careers.html">CAREERS</a></li>
+              <li class="nav-item"><a class="nav-link li--light" href="contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
+
+    
 
     <main id="main" class="work_main_container">
 
