--- a/pages/about.html
+++ b/pages/about.html
@@ -11,9 +11,9 @@
 
 <body>
   <div class="body_container--light">
-  <header class="light_bg">
-    <nav class="navbar navbar-expand-lg nav_bootstrap light_bg">
-      <div class="container-fluid">
+  <header>
+    <nav class="navbar navbar-expand-lg nav_bootstrap">
+      <div class="container-fluid light_bg">
         <a class="navbar-brand" href="">
           <img class="btn_logo" src="../img/logo-circle-light.svg" width="80px">
         </a>
