--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,9 +10,9 @@
 
 <body>
   <div class="body_container--light">
-    <header class="light_bg">
-      <nav class="navbar navbar-expand-lg nav_bootstrap light_bg">
-        <div class="container-fluid">
+    <header>
+      <nav class="navbar navbar-expand-lg nav_bootstrap">
+        <div class="container-fluid  light_bg">
           <a class="navbar-brand" href="">
             <img class="btn_logo" src="../img/logo-circle-light.svg" width="80px">
           </a>
@@ -36,7 +36,7 @@
       <main class="container contact_main_container">
         <section class="row contact_main_section1">
           <article class="col-md-12 col-lg-6 contact_main_container_illustration">
-              <img src="../img/CONTACT-illustration-500x500.svg">
+              <img src="../img/CONTACT-illustration-500x500.png" class="contact_illustration">
           </article>
   
           <article class="col-md-12 col-lg-6 contact_main_container_text">
@@ -47,10 +47,8 @@
             </div>
           </article>
   
-        <section class="row contact_main_section2">
-          <article class="form-area">
-            <div class="container">
-                <div class="row">
+        <section class="container contact_main_section2">
+          <article class="row form-area">
                     <div class="col-sm-12 col-lg-6">
                         <div class="left">
                           <h2 class="h5_contact">GET IN TOUCH</h2>
