--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
   <div class="body_container--dark">
-    <header class="dark_bg">
-      <nav class="navbar navbar-expand-lg nav_bootstrap dark_bg">
-        <div class="container-fluid">
+    <header>
+      <nav class="navbar navbar-expand-lg nav_bootstrap">
+        <div class="container-fluid dark_bg">
           <a class="navbar-brand" href="">
             <img class="btn_logo" src="./img/logo-circle-dark.svg" width="80px">
           </a>
@@ -22,11 +22,11 @@
           </button>
           <div class="collapse navbar-collapse text-center dark_bg pb-5" id="menu">
             <ul class="navbar-nav nav-fill w-100">
-              <li class="nav-item li_bootstrap"><a class="nav-link li--dark--active" href="../index.html">HOME</a></li>
-              <li class="nav-item"><a class="nav-link li--dark" href="about.html">ABOUT</a></li>
-              <li class="nav-item"><a class="nav-link li--dark" href="work.html">WORK</a></li>
-              <li class="nav-item"><a class="nav-link li--dark" href="careers.html">CAREERS</a></li>
-              <li class="nav-item"><a class="nav-link li--dark" href="contact.html">CONTACT</a></li>
+              <li class="nav-item li_bootstrap"><a class="nav-link li--dark--active" href="">HOME</a></li>
+              <li class="nav-item"><a class="nav-link li--dark" href="./pages/about.html">ABOUT</a></li>
+              <li class="nav-item"><a class="nav-link li--dark" href="./pages/work.html">WORK</a></li>
+              <li class="nav-item"><a class="nav-link li--dark" href="./pages/careers.html">CAREERS</a></li>
+              <li class="nav-item"><a class="nav-link li--dark" href="./pages/contact.html">CONTACT</a></li>
             </ul>
           </div>
         </div>
