--- a/index.html
+++ b/index.html
@@ -147,39 +147,38 @@
 
 </main>
 
-  <footer id="footer">
-    <div class="footer_column_1">
-      <img class="footer_logo" src="./img/logo.svg">
-    </div>
+<footer class="container-fluid">
+  <section class="row">
 
-    <div class="footer_columns_frame">
-      <div class="footer_column_2">
-        <h3 class="h6-footer">Stay connected</h3>
-        <div class="footer_socialicons">
-          <a href=""><img class="footer_icn" src="./img/icn-ig.svg" width="40px"></a>
-          <a href=""><img class="footer_icn" src="./img/icn-tw.svg" width="40px"></a>
-          <a href=""><img class="footer_icn" src="./img/icn-linkedin.svg" width="40px"></a>       
-        </div>
+    <article class="col-lg-5 col-xs-10">
+      <img class="footer_logo" src="./img/logo.svg">
+    </article>
+    <article class="col-lg-2 col-md-6 col-xs-10 footer_column2">
+      <h3 class="h6-footer">Stay connected</h3>
+      <div class="footer_socialicons">
+        <a href=""><img class="footer_icn" src="./img/icn-ig.svg" width="40px"></a>
+        <a href=""><img class="footer_icn" src="./img/icn-tw.svg" width="40px"></a>
+        <a href=""><img class="footer_icn" src="./img/icn-linkedin.svg" width="40px"></a>       
       </div>
-        
-      <div class="footer_column_3">
-        <h3 class="h6-footer">Contact us</h3>
-        <div class="footer_contact_frame">
-          <img class="footer_icn" src="./img/icn-location.svg" width="40px" height="40px">
-          <p class="p-footer">London-Barcelona-Buenos Aires</p>
-        </div>
-        <div class="footer_contact_frame">
-          <img class="footer_icn" src="./img/icn-wsp.svg" width="40px" height="40px">
-          <p class="p-footer"> +4407830669276</p>
-        </div>
-        <div class="footer_contact_frame">
-          <img class="footer_icn" src="./img/icn-mail.svg" width="40px" height="40px">
-          <p class="p-footer">info@noti.com</p>
-        </div>
+    </article>
+    <article class="col-lg-3 col-md-6 col-xs-10 footer_column3">
+      <h3 class="h6-footer">Contact us</h3>
+      <div class="footer_contact_frame">
+        <img class="footer_icn" src="./img/icn-location.svg" width="40px" height="40px">
+        <p class="p-footer">London-Barcelona-Buenos Aires</p>
       </div>
-    </div>
-  
-  </footer>
+      <div class="footer_contact_frame">
+        <img class="footer_icn" src="./img/icn-wsp.svg" width="40px" height="40px">
+        <p class="p-footer"> +4407830669276</p>
+      </div>
+      <div class="footer_contact_frame">
+        <img class="footer_icn" src="./img/icn-mail.svg" width="40px" height="40px">
+        <p class="p-footer">info@noti.com</p>
+      </div>
+    </article>
+
+  </section>
+</footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
