--- a/pages/work.html
+++ b/pages/work.html
@@ -156,7 +156,8 @@
 
       <article class="col-lg-3 col-md-12 work_main_section3_col1">
         <h3 class="h5_about dark_text">OUR LATEST<br>PROJECTS</h3>
-        <img src="../img/subheadings_arrow.svg" width="220px">
+        <img class="arrow_side"src="../img/subheadings_arrow.svg" width="220px">
+        <img class="arrow_down" src="../img/subheadings_arrow_down.svg" height="72px">
       </article>
       <article class="col-lg-9 col-md-12 work_main_section3_col2">
         <div class="row">
