--- a/pages/careers.html
+++ b/pages/careers.html
@@ -48,9 +48,10 @@
 
       <section class="row careers_main_section2">
 
-        <article class="col-lg-12 col-xl-3 careers_main_section2_col1">
+        <article class="col-lg-12 col-xl-3 about_main_section_heading">
           <h3 class="h5_about light_text">OPEN<br>POSITIONS</h3>
-          <img src="../img/subheadings_arrow_light.svg" width="220px">
+          <img class="arrow_side_2"src="../img/subheadings_arrow_light.svg" width="80%">
+          <img class="arrow_down_2" src="../img/subheadings_arrow_down_light.svg" height="70%">
         </article>
 
         <acticle class="col-lg-12 col-xl-9">
@@ -144,8 +145,7 @@
   
       </section>
     </footer>
-
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
