--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,7 +43,7 @@
             <h1 class="h5_contact">LET’S TALK</h1>
             <h2 class="h3_contact">IF YOU WANT ALL EYES ON YOU, COME AND SAY HELLO</h2>
             <div class="btn--large--light">
-              <a href="https://link1.com" class="p--light">Get in touch</a>
+              <a href="" class="p--light">Get in touch</a>
             </div>
           </article>
   
@@ -109,10 +109,9 @@
               <p class="p-footer">info@noti.com</p>
             </div>
           </article>
-    
         </section>
       </footer>
-  </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-</body>
+    </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  </body>
 </html>
