--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
   
       <section class="container index_main_section2">
         <article class="row">
-          <div>
-            <h1 class="h3_about light_text">NAUGHTY:</h1>
-            <h2 class="h2_about light_text">“NOT-BEING-OBEDIENT”</h2>
-          </div>
-        
+          <h1 class="h3_about light_text">NAUGHTY:</h1>
+          <h2 class="h2_about light_text">“NOT-BEING-OBEDIENT”</h2>
+        </article>
+        <article class="row">
           <div class="col-xl-4 col-sm-12 about_main_frame_card">
     
             <div class="about_main_card--default">
