--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,7 +52,7 @@
                     <div class="col-sm-12 col-lg-6">
                         <div class="left">
                           <h2 class="h5_contact">GET IN TOUCH</h2>
-                          <h3 class="h3_contact">FOR BUSINESS ENQUIRES</h3>
+                          <h3 class="h3_contact">FOR BUSINESS ENQUIRIES</h3>
                         </div>
                     </div>
                     <div class="col-sm-12 col-lg-6">
