--- a/pages/careers.html
+++ b/pages/careers.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <div class="body_container--dark">
+  <div class="bg--dark">
     <header>
       <nav class="navbar navbar-expand-lg nav_bootstrap">
-        <div class="container-fluid dark_bg">
+        <div class="container-fluid bg--dark">
           <a class="navbar-brand" href="">
             <img class="btn_logo" src="../img/logo-circle-dark.svg" width="80px">
           </a>
@@ -20,7 +20,7 @@
             <img src="../img/icn-burger-light.svg" width="40px">
           </button>
           </button>
-          <div class="collapse navbar-collapse text-center dark_bg pb-5" id="menu">
+          <div class="collapse navbar-collapse text-center bg--dark pb-5" id="menu">
             <ul class="navbar-nav nav-fill w-100">
               <li class="nav-item li_bootstrap"><a class="nav-link li--dark" href="../index.html">HOME</a></li>
               <li class="nav-item"><a class="nav-link li--dark" href="about.html">ABOUT</a></li>
@@ -35,7 +35,7 @@
 
     <main class="container careers_main_container">
 
-      <section class="row careers_main_container_text">
+      <section class="row careers_main_section1">
         <article class="col-md-12 col-lg-6 careers_main_container_text">
           <h1 class="h5_careers">CAREERS</h1>
           <h2 class="h3_careers">WANT TO MAKE DIFFERENT HAPPEN?</h2>
@@ -49,7 +49,7 @@
       <section class="row careers_main_section2">
 
         <article class="col-lg-12 col-xl-3 about_main_section_heading">
-          <h3 class="h5_about light_text">OPEN<br>POSITIONS</h3>
+          <h3 class="h5_about text-light">OPEN<br>POSITIONS</h3>
           <img class="arrow_side_2"src="../img/subheadings_arrow_light.svg" width="80%">
           <img class="arrow_down_2" src="../img/subheadings_arrow_down_light.svg" height="70%">
         </article>
@@ -59,7 +59,7 @@
 
             <div class="accordion-item">
               <h2 class="accordion-header open">
-                <button class="accordion-button p_work light_text" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <button class="accordion-button p_work text-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   Mid-Weight Strategist 
                 </button>
               </h2>
@@ -73,7 +73,7 @@
 
             <div class="accordion-item">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed p_work light_text" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="accordion-button collapsed p_work text-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   Freelance MW Designer
                 </button>
               </h2>
@@ -87,7 +87,7 @@
 
             <div class="accordion-item">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed p_work light_text" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="accordion-button collapsed p_work text-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   UI/UX Web Designer
                 </button>
               </h2>
@@ -105,9 +105,9 @@
 
       <section class="row careers_main_section3">
         <div class="careers_main_section3_container">
-          <h4 class="h4_about light_text left_align">Noti is proud to</h4>
-          <h4 class="h4_about light_text">have <span class = "span_underline">100%</span> gender pay</h4>
-          <h4 class="h4_about light_text">parity across the board.</h4>
+          <h4 class="h4_about text-light left_align">Noti is proud to</h4>
+          <h4 class="h4_about text-light">have <span class = "span_underline">100%</span> gender pay</h4>
+          <h4 class="h4_about text-light">parity across the board.</h4>
         </div>
       </section>
 
