--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@
   <div class="body_container--light">
     <header>
       <nav class="navbar navbar-expand-lg nav_bootstrap">
-        <div class="container-fluid  light_bg">
+        <div class="container-fluid  bg--light">
           <a class="navbar-brand" href="">
             <img class="btn_logo" src="../img/logo-circle-light.svg" width="80px">
           </a>
@@ -20,7 +20,7 @@
             <img src="../img/icn-burger-dark.svg" width="40px">
           </button>
           </button>
-          <div class="collapse navbar-collapse text-center light_bg pb-5" id="menu">
+          <div class="collapse navbar-collapse text-center bg--light pb-5" id="menu">
             <ul class="navbar-nav nav-fill w-100">
               <li class="nav-item li_bootstrap"><a class="nav-link li--light" href="../index.html">HOME</a></li>
               <li class="nav-item"><a class="nav-link li--light" href="about.html">ABOUT</a></li>
