--- a/pages/work.html
+++ b/pages/work.html
@@ -17,7 +17,7 @@
       <nav class="navbar navbar-expand-lg nav_bootstrap">
         <div class="container-fluid light_bg">
           <a class="navbar-brand" href="../index.html">
-            <img class="btn_logo" src="../img/logo-circle-light.svg" alt="Noti logo N over a circle" width="80px">
+            <img class="btn_logo" src="../img/logo-n-dark.svg" alt="Noti logo N over a circle" width="80px">
           </a>
           <button class="navbar-toggler shadow-none border-0 btn-burger" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <img src="../img/icn-burger-dark.svg" width="40px">
