--- a/pages/work.html
+++ b/pages/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blood, sweat and ideas: new work posted here.">
-    <meta name="description" content="Design portfolio, Creative projects, London design agency work, Barcelona design studio projects, Buenos Aires design agency portfolio, Design case studies, Multinational design projects, Graphic design examples, Design agency client work, Showcase of our designs">
+    <meta name="keywords" content="design portfolio, creative projects, London design agency work, Barcelona design studio projects, Buenos Aires design agency portfolio, design case studies, multinational design projects, graphic design examples, design agency client work, showcase of our designs">
     <title>Work - NOTI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="body_container--light">
+  <div class="body body_container--light">
     <header>
       <nav class="navbar navbar-expand-lg nav_bootstrap">
         <div class="container-fluid light_bg">
@@ -20,7 +20,7 @@
             <img class="btn_logo" src="../img/logo-n-dark.svg" alt="Noti logo N over a circle" width="80px">
           </a>
           <button class="navbar-toggler shadow-none border-0 btn-burger" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <img src="../img/icn-burger-dark.svg" width="40px">
+            <img src="../img/icn-burger-dark.svg" alt="burger icon" width="40px">
           </button>
           </button>
           <div class="collapse navbar-collapse text-center light_bg pb-5" id="menu">
@@ -161,8 +161,8 @@
 
             <div class="col-lg-3 col-xs-12 work_main_section3_col1 index_heading_arrow" data-aos="fade-right">
               <h3 class="h5_about dark_text">OUR LATEST<br>PROJECTS</h3>
-              <img class="arrow_side"src="../img/subheadings_arrow.svg" width="70%">
-              <img class="arrow_down" src="../img/subheadings_arrow_down.svg" height="72px">
+              <img class="arrow_side"src="../img/subheadings_arrow.svg" alt="arrow pointing right" width="70%">
+              <img class="arrow_down" src="../img/subheadings_arrow_down.svg" alt="arrow pointing down" height="72px">
             </div>
   
             <div class="col-lg-9 col-xs-12 work_main_section3_col2" data-aos="fade-left">
@@ -197,30 +197,30 @@
       <section class="row justify-content-around">
   
         <article class="col-lg-5 col-xs-10">
-          <img class="footer_logo" src="../img/logo.svg">
+          <img class="footer_logo" src="../img/logo.svg" alt="Noti logo">
         </article>
 
         <article class="col-lg-2 col-md-6 col-xs-10 footer_column2">
           <h3 class="h6-footer">Stay connected</h3>
           <div class="footer_socialicons">
-            <a href=""><img class="footer_icn" src="../img/icn-ig.svg" width="40px"></a>
-            <a href=""><img class="footer_icn" src="../img/icn-tw.svg" width="40px"></a>
-            <a href=""><img class="footer_icn" src="../img/icn-linkedin.svg" width="40px"></a>       
+            <a href=""><img class="footer_icn" src="../img/icn-ig.svg" alt="instagram icon" width="40px"></a>
+            <a href=""><img class="footer_icn" src="../img/icn-tw.svg" alt="twitter icon" width="40px"></a>
+            <a href=""><img class="footer_icn" src="../img/icn-linkedin.svg" alt="linkedin icon" width="40px"></a>          
           </div>
         </article>
 
         <article class="col-lg-3 col-md-6 col-xs-10 footer_column3">
           <h3 class="h6-footer">Contact us</h3>
           <div class="footer_contact_frame">
-            <img class="footer_icn" src="../img/icn-location.svg" width="40px" height="40px">
+            <img class="footer_icn" src="../img/icn-location.svg" alt="location icon" width="40px" height="40px">
             <p class="p-footer">London-Barcelona-Buenos Aires</p>
           </div>
           <div class="footer_contact_frame">
-            <img class="footer_icn" src="../img/icn-wsp.svg" width="40px" height="40px">
+            <img class="footer_icn" src="../img/icn-wsp.svg" alt="whatsapp icon" width="40px" height="40px">
             <p class="p-footer"> +4407830669276</p>
           </div>
           <div class="footer_contact_frame">
-            <img class="footer_icn" src="../img/icn-mail.svg" width="40px" height="40px">
+            <img class="footer_icn" src="../img/icn-mail.svg" alt="email icon" width="40px" height="40px">
             <p class="p-footer">info@noti.com</p>
           </div>
         </article>
