--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Email us to info@noti.com, or give us a call at +4407830669276.">
-    <meta name="description" content="Design agency contact, London design agency, Barcelona design studio, Buenos Aires creative firm, Contact information, Get in touch, Design services contact, Multinational design agency, Design consultancy email">
+    <meta name="keywords" content="design agency contact, London design agency, Barcelona design studio, Buenos Aires creative firm, contact information, get in touch, design services contact, multinational design agency, design consultancy email">
     <title>Contact - NOTI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="body_container--light">
+  <div class="body_container--light body">
     <header>
       <nav class="navbar navbar-expand-lg nav_bootstrap">
         <div class="container-fluid bg--light">
@@ -20,7 +20,7 @@
             <img class="btn_logo" src="../img/logo-n-dark.svg" alt="Noti logo N over a circle" width="80px">
           </a>
           <button class="navbar-toggler shadow-none border-0 btn-burger" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <img src="../img/icn-burger-dark.svg" width="40px">
+            <img src="../img/icn-burger-dark.svg" alt="burger icon" width="40px">
           </button>
           </button>
           <div class="collapse navbar-collapse text-center bg--light pb-5" id="menu">
@@ -43,9 +43,9 @@
           </article>
   
           <article class="col-md-12 col-lg-6 contact_main_container_text">
-            <h1 class="h5_contact" data-aos="fade-up" data-aos-offset="500" data-aos-duration="600">LET’S TALK</h1>
-            <h2 class="h3_contact" data-aos="fade-up" data-aos-offset="500" data-aos-duration="700">IF YOU WANT ALL EYES ON YOU, COME AND SAY HELLO</h2>
-            <div class="btn--large--light" data-aos="fade-up" data-aos-offset="200" data-aos-duration="800"><a href="./contact.html" class="p--btn--light">Get in touch</a></div>
+            <h1 class="h5_contact" data-aos="fade-up" data-aos-offset="100" data-aos-duration="500">LET’S TALK</h1>
+            <h2 class="h3_contact" data-aos="fade-up" data-aos-offset="100" data-aos-duration="600">IF YOU WANT ALL EYES ON YOU, COME AND SAY HELLO</h2>
+            <div class="btn--large--light" data-aos="fade-up" data-aos-offset="200" data-aos-duration="700"><a href="./contact.html" class="p--btn--light">Get in touch</a></div>
           </article>
   
         <section class="container contact_main_section2">
@@ -85,30 +85,30 @@
         <section class="row justify-content-around">
   
           <article class="col-lg-5 col-xs-10">
-            <img class="footer_logo" src="../img/logo.svg">
+            <img class="footer_logo" src="../img/logo.svg" alt="Noti logo">
           </article>
 
           <article class="col-lg-2 col-md-6 col-xs-10 footer_column2">
             <h3 class="h6-footer">Stay connected</h3>
             <div class="footer_socialicons">
-              <a href=""><img class="footer_icn" src="../img/icn-ig.svg" width="40px"></a>
-              <a href=""><img class="footer_icn" src="../img/icn-tw.svg" width="40px"></a>
-              <a href=""><img class="footer_icn" src="../img/icn-linkedin.svg" width="40px"></a>       
+              <a href=""><img class="footer_icn" src="../img/icn-ig.svg" alt="instagram icon" width="40px"></a>
+              <a href=""><img class="footer_icn" src="../img/icn-tw.svg" alt="twitter icon" width="40px"></a>
+              <a href=""><img class="footer_icn" src="../img/icn-linkedin.svg" alt="linkedin icon" width="40px"></a>   
             </div>
           </article>
 
           <article class="col-lg-3 col-md-6 col-xs-10 footer_column3">
             <h3 class="h6-footer">Contact us</h3>
             <div class="footer_contact_frame">
-              <img class="footer_icn" src="../img/icn-location.svg" width="40px" height="40px">
+              <img class="footer_icn" src="../img/icn-location.svg"alt="location icon"  width="40px" height="40px">
               <p class="p-footer">London-Barcelona-Buenos Aires</p>
             </div>
             <div class="footer_contact_frame">
-              <img class="footer_icn" src="../img/icn-wsp.svg" width="40px" height="40px">
+              <img class="footer_icn" src="../img/icn-wsp.svg" alt="whatsapp icon" width="40px" height="40px">
               <p class="p-footer"> +4407830669276</p>
             </div>
             <div class="footer_contact_frame">
-              <img class="footer_icn" src="../img/icn-mail.svg" width="40px" height="40px">
+              <img class="footer_icn" src="../img/icn-mail.svg" alt="email icon" width="40px" height="40px">
               <p class="p-footer">info@noti.com</p>
             </div>
           </article>
